@@ -5,6 +5,9 @@ Release 3.0.0-BETA2 - ???
    * Updated PST parser to use standard Message metadata keys and improved
      handling of embedded files (TIKA-4248).
 
+   * Convenience methods for XML readers were moved from ParseContext to
+     XMLReaderUtils (TIKA-4259).
+
    Other Changes
 
    * Add optional PST parser based on libpst/readpst (TIKA-4250).
